# Enigma

./: README.md  USASPending_Parser.py  enigma_entities.json  enigma_workflow.md  ingestion_flow.md  nyc.md  nyc_parse.py  nyc_parser.py  public_dataset.md
 first_iteration/: nyc_parser.py
enigma_ingestion/: entity_license_edges_20251108.csv  licenses_20251108.csv
second_iteration/: .env.example  .gitignore  README.md  pyproject.toml
second_iteration/src/: pipeline.py
second_iteration/src/export/: json_exporter.py
second_iteration/src/feature_detection/: feature_manager.py  heuristics_engine.py  pattern_detector.py  schema_fingerprint.py  unique_value_analyzer.py
second_iteration/src/ingestion/: __init__.py  file_detector.py  ingest.py
second_iteration/src/ingestion/loaders/: __init__.py  api_loader.py  base_loader.py  csv_loader.py  json_loader.py
second_iteration/src/ml_process/: __init__.py  row_classifier.py
second_iteration/src/normalization/: alias.py  alias_mapper.py  cleaner.py  normalizer.py  type_casting.py
second_iteration/src/ontology/: __init__.py  formatter.py
second_iteration/src/routing/: base_strategy.py  strategy_router.py
second_iteration/src/routing/strategies/: address_strategy.py  demographic_strategy.py  financial_strategy.py  generic_strategy.py  geo_strategy.py
second_iteration/src/utils/: config.py  helpers.py  logger.py
second_iteration/tests/: test_export.py  test_feature_detection.py  test_ml_process.py  test_normalization.py  test_ontology.py  test_pipeline.py  test_routing.py  tests_ingestion.py
(+4 files in other folders)
